app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: dev
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: containerregistrey.com
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: name-of-secret
